# zkVerify

./: Cargo.toml
docker/dockerfiles/: zkv-builder.Dockerfile  zkv-relay.Dockerfile
native/: Cargo.toml
native/src/: lib.rs  stwo_verify.rs
rpc/vk_hash/: Cargo.toml
runtime/volta/: Cargo.toml
runtime/zkverify/: Cargo.toml
runtime/zkverify/src/: lib.rs  weights.rs
scripts/: run-local-ci.ps1
verifiers/stwo/src/: stwo.rs
