[package]
name = "vk-hash"
version = "0.1.0"
description = "Add runtime API for computing the vk hash"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license = "Apache-2.0"

[dependencies]
codec = { default-features = false, workspace = true }
jsonrpsee = { workspace = true, features = ["client-core", "server", "macros"] }
sp-core = { default-features = false, workspace = true }
hp-verifiers = { workspace = true }
 
serde = { default-features = false, workspace = true }
volta-runtime = { default-features = false, workspace = true }

[features]
default = [ "std" ]
std = [
    "codec/std",
    "hp-verifiers/std",
    "serde/std",
    "sp-core/std",
    "volta-runtime/std",
]
